--- a/index.html
+++ b/index.html
@@ -47,11 +47,11 @@
             <div class="invitation-text">
                 <p>With God's blessings,</p>
                 <p>We request the honor of your presence at the wedding of</p>
-                <p>Son of Mrs. Kalpana Patel & Mr. Chandrakant Patel,</p>
+                <p>Son of Mrs. Kalpana Patel & Mr. Chandrakant Patel</p>
                 <h3>Aniket</h3>
                 <p>With</p>
                 <h3>Upasana</h3>
-                <p>Daughter of Mrs. Anjana Kalra & Mr. Vijay Kalra.</p>
+                <p>Daughter of Mrs. Anjana Kalra & Mr. Vijay Kalra</p>
                 <p>We look forward to your presence on this special day.</p>
             </div>
         </section>
